syntax = "proto3";

package p2p.v1;

import "app/blc/blc.proto";

option java_multiple_files = true;
option go_package = "bigcat_test_coin/api/p2p;v1";
option java_outer_classname = "AddrV1";
option java_package = "dev.kratos.api.coin.v1";



//P2P通讯协议
message N2PGetInfo{
  int64 search_height = 1;
}
message P2NGetInfo{
  int64 height = 1;
  bytes left_hash = 2;
  bytes last_hash = 3;
  bytes search_hash = 4;
  int64 verifier_total = 5;
  int64 now = 6;
}

message N2PGetBlock{
  int64 left_height = 1;
  int64 right_height = 2;
  bytes last_hash = 3;
}

message N2PGetBlocksHash{
  int64 left_height = 1;
  repeated bytes  block_txs = 2;
}

message P2NGetBlock{
  repeated blc.Block blocks = 1;
}

message PushBlock {
  blc.Block block = 1;
}

message PlushVerifier{
  blc.Verifier verifier = 1;
}

message PushContracts{
  repeated blc.Cont conts = 1;
}

message PushTransactions{
  repeated blc.Transaction trans = 1;
}